--- a/src/rooms/Forest/Forest.css
+++ b/src/rooms/Forest/Forest.css
@@ -584,7 +584,7 @@
 /* Stats */
 .forest-stats {
   position: fixed;
-  top: 20px;
+  top: 70px;
   left: 20px;
   display: flex;
   flex-direction: column;
